--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Features:
 ---------
 - Browser, enlarged and slideshow renderers for viewing the entire
   collection, editing, a single photo and slideshows respectively.
-- Folder exporter to export selected photos to a folder.
+- Exporters to export selected photos to a folder or CD/DVD.
 - Date view for showing photo dates.
 - Basic editing like brightness, contrast, flipping, rotation, saturation and
   scaling, and undo, redo of operations.
@@ -50,6 +50,7 @@ Features:
 Dependencies:
 -------------
  - babl
+ - libbrasero-burn >= 2.28.3
  - dbus-glib-1
  - gdl-1.0
  - gegl
